feat: add iterator implementation on Garage